# algorithm

./: .gitignore  CMakeLists.txt  README.md  algorithm.cbp  codeforces.cbp  helpers.hpp  template.cc
codeforces/0100-0199/: 136a.cc
codeforces/0200-0299/: 233a.cc
codeforces/0300-0399/: 337a.cc  339b.cc  363b.cc  379a.cc
codeforces/0400-0499/: 427a.cc  455a.cc  460a.cc  476a.cc
codeforces/0500-0599/: 581a.cc
codeforces/0700-0799/: 702a.cc  707a.cc  749a.cc  785a.cc
codeforces/0900-0999/: 935a.cc
codeforces/1200-1299/: 1283a.cc  1294a.cc
codeforces/1400-1499/: 1409a.cc  1426a.cc  1476a.cc
codeforces/1500-1599/: 1542a.cc
codeforces/1600-1699/: 1669a.cc  1676b.cc
codeforces/1800-1899/: 1857a.cc
codeforces/1900-1999/: 1950a.cc
problems/: 1030a.cc  131a.cc  1343a.cc  1367b.cc  1374b.cc  1475b.cc  1535a.cc  1624a.cc  1676a.cc  1722a.cc  1829a.cc  1850a.cc  189a.cc  208a.cc  279b.cc  34b.cc  43a.cc  443a.cc  467a.cc  489b.cc  492a.cc  510a.cc  514a.cc
problems/0100-0199/: 144a.cc  158b.cc  191a.cc
problems/0200-0299/: 200b.cc  228a.cc  230a.cc  270a.cc
problems/0300-0399/: 313a.cc  318a.cc
problems/0400-0499/: 451b.cc  456a.cc  474b.cc  (+1 more)
src/: 113a.cc  1328a.cc  1335a.cc  1343b.cc  1352a.cc  1352c.cc  1367a.cc  1374a.cc  141a.cc  1433a.cc  1475a.cc  148a.cc  1512a.cc  151a.cc  1520a.cc  160a.cc  1619a.cc  1742a.cc  1760a.cc  1791a.cc  1807a.cc  230b.cc  25a.cc  268a.cc  271a.cc  32b.cc  344a.cc  381a.cc  405a.cc  41a.cc  431a.cc  432a.cc  451a.cc  466a.cc  469a.cc  472a.cc  479a.cc  492b.cc  4c.cc  500a.cc  (+15 more)
templates/: main.cc  two_sat.hpp
(+66 files in other folders)
